--- a/invitation.html
+++ b/invitation.html
@@ -98,6 +98,7 @@
 
         table p {
             min-height: 24px;
+            padding: 0 12px;
         }
 
         table.card {
@@ -109,6 +110,7 @@
             margin-bottom: 5px;
             color: #D0D0D0;
         }
+
         table.footer p {
             margin-top: 15px;
             margin-bottom: 10px;
@@ -121,18 +123,19 @@
             text-decoration: underline;
             color: #555555;
         }
+
         p.h2 {
-            font-size: 32px;
-            font-weight: 600;
+            font-size: 28px;
         }
 
         p.h3 {
-            font-size: 24px;
+            font-size: 20px;
         }
 
         p.h4 {
-            font-size: 20px;
+            font-size: 18px;
         }
+
         a.button {
             background: #460016;
             padding: 12px 24px;
@@ -142,7 +145,7 @@
             font-size: 18px;
         }
 
-        @media screen and (max-width: 580px) {
+        @media screen and (max-width: 480px) {
             .container {
                 width: 100%;
                 margin: auto;
@@ -165,7 +168,7 @@
         <tr>
             <td valign="top">
                 <table role="presentation" aria-hidden="true" cellspacing="0" cellpadding="0" border="0" align="center"
-                    width="580px" class="container">
+                    width="520px" class="container">
                     <tr>
                         <td>
                             <table role="presentation" aria-hidden="true" cellspacing="0" cellpadding="0" border="0"
@@ -178,7 +181,7 @@
                     </tr>
                 </table>
                 <table role="presentation" aria-hidden="true" cellspacing="0" cellpadding="0" border="0" align="center"
-                    width="580px" class="container card align-center">
+                    width="520px" class="container card align-center">
                     <tr>
                         <td>
                             <p></p>
@@ -201,7 +204,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p class="h3">Wedding of Juan and Elvira</p>
+                            <p class="h3">The Wedding of Juan and Elvira</p>
                         </td>
                     </tr>
                     <tr>
@@ -216,7 +219,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://elvirafoundthejuan.com/assets/church-icon.png" alt=""/>
+                            <img src="https://elvirafoundthejuan.com/assets/church-icon.png" alt="" />
                         </td>
                     </tr>
                     <tr>
@@ -236,7 +239,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://elvirafoundthejuan.com/assets/reception-icon.png" alt=""/>
+                            <img src="https://elvirafoundthejuan.com/assets/reception-icon.png" alt="" />
                         </td>
                     </tr>
                     <tr>
@@ -256,7 +259,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="https://elvirafoundthejuan.com/assets/rsvp-qrcode.png" alt=""/>
+                            <img src="https://elvirafoundthejuan.com/assets/rsvp-qrcode.png" alt="" />
                         </td>
                     </tr>
                     <tr>
@@ -276,7 +279,7 @@
                     </tr>
                 </table>
                 <table role="presentation" aria-hidden="true" cellspacing="0" cellpadding="0" border="0" align="center"
-                    width="580px" class="container footer">
+                    width="520px" class="container footer">
                     <tr>
                         <td>
                             <p class="align-center">
@@ -284,6 +287,9 @@
                                     href="https://elvirafoundthejuan.com" target="_blank">Elvira Found the Juan</a>.
                             </p>
                         </td>
+                    </tr>
+                    <tr>
+                        <td height="16px"></td>
                     </tr>
                 </table>
             </td>
