--- a/rsvp.html
+++ b/rsvp.html
@@ -52,7 +52,7 @@
 
         nav {
             position: fixed;
-            top: 2vh;
+            top: 22px;
             width: 100%;
             height: var(--nav-height);
 
@@ -130,11 +130,11 @@
         {
             "@context": "http://schema.org",
             "@type": "WebPage",
-            "url": "https://www.ElviraFoundTheJuan.com",
+            "url": "https://www.ElviraFoundTheJuan.com/rsvp",
             "name": "Elvira Found the Juan",
             "headline": "The Wedding of Juan and Elvira",
             "description": "Be a witness to our special day on 02/12/22",
-            "significantLink": "",
+            "significantLink": "https://www.ElviraFoundTheJuan.com",
             "relatedLink": ""
         }
     </script>
