--- a/index.html
+++ b/index.html
@@ -172,6 +172,32 @@
         #about {
             text-align: left;
             font-size: 1.1em;
+
+            display: none;
+        }
+
+        #photos {
+            justify-content: start;
+            flex-direction: row;
+
+            overflow-y: scroll;
+            scroll-snap-type: x mandatory;
+        }
+
+        #photos .photo {
+            width: 80%;
+            max-height: 600px;
+            padding: 16px 2.5%;
+            
+            scroll-snap-align: center;
+        }
+
+        #photos .photo:first-child {
+            margin-left: 10%;
+        }
+
+        #photos .photo:last-child {
+            margin-right: 10%;
         }
 
         #schedule {
@@ -233,6 +259,21 @@
             <h2>Christoforus Juan Benvenuto</h2>
             <h2>&</h2>
             <h2>Agatha Elvira Budiawan</h2>
+        </div>
+
+        <div id="photos" class="section hide-scrollbar">
+            <img class="photo" src="/assets/photos/01.jpg" alt="" />
+            <img class="photo" src="/assets/photos/02.jpg" alt="" />
+            <img class="photo" src="/assets/photos/03.jpg" alt="" />
+            <img class="photo" src="/assets/photos/04.jpg" alt="" />
+            <img class="photo" src="/assets/photos/05.jpg" alt="" />
+            <img class="photo" src="/assets/photos/06.jpg" alt="" />
+            <img class="photo" src="/assets/photos/07.jpg" alt="" />
+            <img class="photo" src="/assets/photos/08.jpg" alt="" />
+            <img class="photo" src="/assets/photos/09.jpg" alt="" />
+            <img class="photo" src="/assets/photos/10.jpg" alt="" />
+            <img class="photo" src="/assets/photos/11.jpg" alt="" />
+            <img class="photo" src="/assets/photos/12.jpg" alt="" />
         </div>
 
         <div id="about" class="container section">
