update opengraph meta

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name="description" content="The Wedding of Juan and Elvira">
+    <meta name="description" content="The Wedding of Juan and Elvira. Be a witness to our special day on 02/12/22!">
+
+    <meta property="og:title" content="Elvira Found the Juan" />
+    <meta property="og:description" content="The Wedding of Juan and Elvira. Be a witness to our special day on 02/12/22!" />
+    <meta property="og:image" itemprop="image" content="//www.ElviraFoundTheJuan.com/assets/thumbnail3.jpg" />
+    <meta property="og:url" content="https://www.ElviraFoundTheJuan.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
@@ -274,7 +281,8 @@
             "name": "Elvira Found the Juan",
             "headline": "The Wedding of Juan and Elvira",
             "description": "Be a witness to our special day on 02/12/22",
-            "significantLink": "https://www.ElviraFoundTheJuan.com/rsvp",
+            "thumbnailUrl": "//www.ElviraFoundTheJuan.com/assets/thumbnail3.jpg",
+            "significantLink": "//www.ElviraFoundTheJuan.com/rsvp",
             "relatedLink": ""
         }
     </script>
