enable stream link

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <div class="spacer"></div>
             <div class="nav-links">
                 <a class="nav-link" href="/">Home</a>
-                <a class="nav-link disabled" aria-disabled="true" href="/stream">Stream</a>
+                <a class="nav-link" href="/stream">Stream</a>
                 <a class="nav-link" href="/rsvp">RSVP</a>
             </div>
             <div class="spacer"></div>
