--- a/stream.html
+++ b/stream.html
@@ -214,7 +214,7 @@
             <div class="embedded-video-container">
                 <iframe
                     class="embedded-video"
-                    src="https://www.youtube.com/embed/ydarbDz6KIs"
+                    src="https://www.youtube.com/embed/upjc_MTxjEU"
                     title="Holy Matrimony of Juan and Elvira"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
